Implement new layout for the location view
Add a flow container for the location widgets and use it to implement a
new location view.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -33,6 +33,7 @@ baobab_SOURCES = \
 	baobab-location-monitor.vala	\
 	baobab-location.vala		\
 	baobab-location-widget.vala	\
+	baobab-location-view.vala	\
 	baobab-scanner.vala		\
 	baobab-window.vala		\
 	main.vala			\
